--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             height: 100%;
             z-index: 1;
         }
-        #video-player video, #video-player iframe {
+        #video-player video, 
+        #video-player iframe {
             width: 100%;
             height: 100%;
+            border: none; /* iframe kenarlarını gizle */
         }
         #channel-menu {
             position: fixed;
@@ -391,6 +393,8 @@
                 // Embed kodundan URL'yi ayıkla
                 const src = url.match(/src="([^"]+)"/)[1];
                 iframe.src = src;
+                iframe.style.width = "100vw"; // Tam genişlik
+                iframe.style.height = "100vh"; // Tam yükseklik
                 iframe.frameBorder = "0";
                 iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share";
                 iframe.allowFullscreen = true;
@@ -540,13 +544,12 @@
         document.getElementById('add-embed-button').addEventListener('click', function() {
             const embedUrl = document.getElementById('embed-url').value;
             if (embedUrl) {
-                // Embed kodunu işleme al ve kanallara ekle
                 const name = 'Embed Kanal ' + (channels.length + 1);
                 savedChannels.push({ name, url: embedUrl });
                 playVideo(embedUrl); // Embedi oynat
                 displayChannels();
-                document.getElementById('embed-url').value = ''; // Girdi alanını temizle
                 channels.push({ name: name, url: embedUrl }); // Embedi kanallara ekle
+                document.getElementById('embed-url').value = ''; // Girdi alanını temizle
             }
         });
 
